<resources>
    <string name="app_name">Themo</string>
    <string name="add">Add Theme</string>
    <string name="image_theme">Theme</string>
    <string name="btn_down">Download</string>
    <string name="btn_apply">Apply</string>
    <string name="fav">Favourites</string>
    <string name="theme_1">Theme1</string>
    <string name="theme_2">Theme2</string>
    <string name="theme_3">Theme3</string>
    <string name="theme_4">Theme4</string>
    <string name="theme_5">Theme5</string>
    <string name="theme_6">Theme6</string>
    <string name="theme_7">Theme7</string>
    <string name="theme_8">Theme8</string>
    <string name="theme_9">Theme9</string>
    <string name="theme_10">Theme10</string>
    <string name="theme_11">Theme11</string>
    <string name="theme_12">Theme12</string>
    <string name="theme_13">Theme13</string>
    <string name="theme_14">Theme14</string>
    <string name="theme_15">Theme15</string>
    <string name="theme_16">Theme16</string>
    <string name="theme_17">Theme17</string>
    <string name="theme_18">Theme18</string>
    <string name="theme_19">Theme19</string>
    <string name="theme_20">Theme20</string>
    <string name="theme_21">Theme21</string>
    <string name="theme_22">Theme22</string>
    <string name="theme_23">Theme23</string>
    <string name="theme_24">Theme24</string>
    <string name="theme_25">Theme25</string>
    <string name="theme_26">Theme26</string>
    <string name="theme_27">Theme27</string>
    <string name="theme_28">Theme28</string>
    <string name="theme_29">Theme29</string>
    <string name="theme_30">Theme30</string>
</resources>